Fixed extra space from sidebar navigation on tablet size screens

--- a/src/styles/_grid.css
+++ b/src/styles/_grid.css
@@ -212,12 +212,12 @@ footer {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1025px) {
 .wd-grid aside {
   position: -webkit-sticky;
   position: sticky;
   top: 75px;
-  height: 85vh;
+  height: fit-content;
   overflow: auto;
   width: max-content;
 }
